zno-macro-draft/tests/zno/ui/err/010-optional-is-not-assignment.stderr
error: expected `=`
 --> tests/zno/ui/err/010-optional-is-not-assignment.rs:3:1
  |
3 | #[zno(name = "a", enter_on_poll)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `zno` (in Nightly builds, run with -Z macro-backtrace for more info)
