zno-macro-draft/tests/zno/ui/err/010-optional-is-not-assignment.rs
use zno::zno;

#[zno(name = "a", enter_on_poll)]
fn f() {}

fn main() {
    f();
}
